@@ -1,0 +1,17 @@
+## name Double ops are OK
+## failures 0
+## cut
+
+my $a;
+my $b;
+my $c = $a || $b;
+
+#-----------------------------------------------------------------------------
+
+## name Bitwise OR failure
+## failures 1
+## cut
+
+my $a;
+my $b;
+my $c = $a | $b;
